--- a/app/globals.css
+++ b/app/globals.css
@@ -15,13 +15,15 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+
+  .container {
+    @apply max-w-[1440px] mx-auto;
   }
 }
